--- a/ALFU_CD.ipynb
+++ b/ALFU_CD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf5Csk0Cxij3emyFk9D8fp",
+      "authorship_tag": "ABX9TyNme1g00aF/ehdJvyqmpxtD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,16 +23,28 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Herouala/ALFU-CD/blob/main/ALFU_CD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Herouala/ndn-caching-alfu-cd/blob/main/ALFU_CD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CaK6DlsIQZ2f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CaK6DlsIQZ2f",
+        "outputId": "25848e48-da30-4940-de49-17a52f965484"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ W2 analysis results exported to w2_analysis_results.pdf\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -252,18 +264,35 @@
         "            self.change_detected = False\n",
         "        self.record_metrics()\n",
         "\n",
-        "# Generate requests with Zipf distribution and change\n",
-        "def generate_requests_with_change(n_requests, n_items, alpha1, alpha2):\n",
-        "    half = n_requests // 2\n",
-        "    items1 = np.arange(1, n_items // 2 + 1)\n",
+        "import numpy as np\n",
+        "\n",
+        "# Generate requests with Zipf distribution and three phases of alpha\n",
+        "def generate_requests_with_change(n_requests, n_items, alpha1, alpha2, alpha3):\n",
+        "    # Split requests into three roughly equal parts\n",
+        "    part1 = n_requests // 3\n",
+        "    part2 = n_requests // 3\n",
+        "    part3 = n_requests - part1 - part2  # ensures total = n_requests\n",
+        "\n",
+        "    # Phase 1\n",
+        "    items1 = np.arange(1, n_items + 1)\n",
         "    probs1 = items1 ** (-alpha1)\n",
         "    probs1 /= probs1.sum()\n",
-        "    req1 = np.random.choice(items1, half, p=probs1)\n",
-        "    items2 = np.arange(n_items // 2 + 1, n_items + 1)\n",
+        "    req1 = np.random.choice(items1, part1, p=probs1)\n",
+        "\n",
+        "    # Phase 2\n",
+        "    items2 = np.arange(1, n_items + 1)\n",
         "    probs2 = items2 ** (-alpha2)\n",
         "    probs2 /= probs2.sum()\n",
-        "    req2 = np.random.choice(items2, n_requests - half, p=probs2)\n",
-        "    return np.concatenate((req1, req2))\n",
+        "    req2 = np.random.choice(items2, part2, p=probs2)\n",
+        "\n",
+        "    # Phase 3\n",
+        "    items3 = np.arange(1, n_items + 1)\n",
+        "    probs3 = items3 ** (-alpha3)\n",
+        "    probs3 /= probs3.sum()\n",
+        "    req3 = np.random.choice(items3, part3, p=probs3)\n",
+        "\n",
+        "    return np.concatenate((req1, req2, req3))\n",
+        "\n",
         "\n",
         "# Simulation function\n",
         "def simulate(strategy_class, requests, cache_size):\n",
@@ -300,13 +329,13 @@
         "\n",
         "    }\n",
         "\n",
-        "    fixed_alpha1, fixed_alpha2 = 1.0, 1.0\n",
+        "    fixed_alpha1, fixed_alpha2, fixed_alpha3 = 0.5, 1.0, 1.5\n",
         "\n",
         "    for size in cache_sizes:\n",
         "        for name, cls in strategies.items():\n",
         "            run_results = {'hr': [], 'ev': [], 'ut': [], 'fair': []}\n",
         "            for _ in range(num_runs):\n",
-        "                requests = generate_requests_with_change(n_requests, n_items, fixed_alpha1, fixed_alpha2)\n",
+        "                requests = generate_requests_with_change(n_requests, n_items, fixed_alpha1, fixed_alpha2, fixed_alpha3)\n",
         "                hr, ev, ut, fair = simulate(cls, requests, size)\n",
         "                run_results['hr'].append(hr)\n",
         "                run_results['ev'].append(ev)\n",
@@ -346,8 +375,69 @@
         "\n",
         "    print(f\"✅ Résultats exportés dans {pdf_filename}\")\n",
         "\n",
+        "def run_w2_analysis():\n",
+        "    n_requests = 10000\n",
+        "    n_items = 1000\n",
+        "    cache_size = 100   # Fix cache size for W2 study\n",
+        "    num_runs = 100     # repeat runs for averaging\n",
+        "    fixed_alpha1, fixed_alpha2, fixed_alpha3 = 0.5, 1.0, 1.5\n",
+        "\n",
+        "    # W2 sizes to test\n",
+        "    w2_sizes = list(range(100, 1001, 100))\n",
+        "\n",
+        "    # Collect metrics\n",
+        "    metrics_w2 = {\n",
+        "        'Hit Rate': [],\n",
+        "        'Evictions': [],\n",
+        "        'Utilization': [],\n",
+        "        'Fairness': []\n",
+        "    }\n",
+        "\n",
+        "    for w2 in w2_sizes:\n",
+        "        run_results = {'hr': [], 'ev': [], 'ut': [], 'fair': []}\n",
+        "        for _ in range(num_runs):\n",
+        "            requests = generate_requests_with_change(n_requests, n_items,\n",
+        "                                                     fixed_alpha1, fixed_alpha2, fixed_alpha3)\n",
+        "            strategy = ALFU_CD(cache_size, w2_size=w2, alpha=0.7, p_threshold=0.05)\n",
+        "            for item in requests:\n",
+        "                strategy.access(item)\n",
+        "            hr = strategy.hits / len(requests)\n",
+        "            ev = strategy.evictions / len(requests)\n",
+        "            ut, fair = strategy.get_metrics(len(requests))\n",
+        "            run_results['hr'].append(hr)\n",
+        "            run_results['ev'].append(ev)\n",
+        "            run_results['ut'].append(ut)\n",
+        "            run_results['fair'].append(fair)\n",
+        "\n",
+        "        # Average per W2\n",
+        "        metrics_w2['Hit Rate'].append(np.mean(run_results['hr']))\n",
+        "        metrics_w2['Evictions'].append(np.mean(run_results['ev']))\n",
+        "        metrics_w2['Utilization'].append(np.mean(run_results['ut']))\n",
+        "        metrics_w2['Fairness'].append(np.mean(run_results['fair']))\n",
+        "\n",
+        "    # Export PDF\n",
+        "    pdf_filename = \"w2_analysis_results.pdf\"\n",
+        "    with PdfPages(pdf_filename) as pdf:\n",
+        "        for metric_name, vals in metrics_w2.items():\n",
+        "            plt.figure(figsize=(10, 6))\n",
+        "            plt.plot(w2_sizes, vals, marker='*', linestyle='--',color='brown' )\n",
+        "            plt.xlabel('W2 Window Size')\n",
+        "            plt.ylabel(metric_name)\n",
+        "            plt.title(f'{metric_name} vs W2 Window Size (ALFU-CD)')\n",
+        "            plt.xticks(w2_sizes)  # 🔹 Forcer affichage de toutes les tailles de cache\n",
+        "            plt.grid(True)\n",
+        "            plt.tight_layout()\n",
+        "            pdf.savefig()\n",
+        "            plt.close()\n",
+        "\n",
+        "    print(f\"✅ W2 analysis results exported to {pdf_filename}\")\n",
+        "\n",
+        "\n",
+        "# Run both analyses\n",
+        "run_w2_analysis()   # new W2 study\n",
+        "\n",
         "# Run the simulations\n",
-        "run_simulations()"
+        "#run_simulations()"
       ]
     }
   ]
