--- a/ALFU_CD.ipynb
+++ b/ALFU_CD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNme1g00aF/ehdJvyqmpxtD",
+      "authorship_tag": "ABX9TyOsSpa+CFZ0B1wvFXK7+oxX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CaK6DlsIQZ2f",
-        "outputId": "25848e48-da30-4940-de49-17a52f965484"
+        "outputId": "04cfa67d-5bae-45ba-dc87-7bca7c3d256e"
       },
       "outputs": [
         {
@@ -389,12 +389,11 @@
         "    metrics_w2 = {\n",
         "        'Hit Rate': [],\n",
         "        'Evictions': [],\n",
-        "        'Utilization': [],\n",
         "        'Fairness': []\n",
         "    }\n",
         "\n",
         "    for w2 in w2_sizes:\n",
-        "        run_results = {'hr': [], 'ev': [], 'ut': [], 'fair': []}\n",
+        "        run_results = {'hr': [], 'ev': [], 'fair': []}\n",
         "        for _ in range(num_runs):\n",
         "            requests = generate_requests_with_change(n_requests, n_items,\n",
         "                                                     fixed_alpha1, fixed_alpha2, fixed_alpha3)\n",
@@ -403,16 +402,14 @@
         "                strategy.access(item)\n",
         "            hr = strategy.hits / len(requests)\n",
         "            ev = strategy.evictions / len(requests)\n",
-        "            ut, fair = strategy.get_metrics(len(requests))\n",
+        "            fair = strategy.get_metrics(len(requests))\n",
         "            run_results['hr'].append(hr)\n",
         "            run_results['ev'].append(ev)\n",
-        "            run_results['ut'].append(ut)\n",
         "            run_results['fair'].append(fair)\n",
         "\n",
         "        # Average per W2\n",
         "        metrics_w2['Hit Rate'].append(np.mean(run_results['hr']))\n",
         "        metrics_w2['Evictions'].append(np.mean(run_results['ev']))\n",
-        "        metrics_w2['Utilization'].append(np.mean(run_results['ut']))\n",
         "        metrics_w2['Fairness'].append(np.mean(run_results['fair']))\n",
         "\n",
         "    # Export PDF\n",
@@ -420,7 +417,7 @@
         "    with PdfPages(pdf_filename) as pdf:\n",
         "        for metric_name, vals in metrics_w2.items():\n",
         "            plt.figure(figsize=(10, 6))\n",
-        "            plt.plot(w2_sizes, vals, marker='*', linestyle='--',color='brown' )\n",
+        "            plt.plot(w2_sizes, vals, marker='*', linestyle='--', color='brown' )\n",
         "            plt.xlabel('W2 Window Size')\n",
         "            plt.ylabel(metric_name)\n",
         "            plt.title(f'{metric_name} vs W2 Window Size (ALFU-CD)')\n",
@@ -434,10 +431,10 @@
         "\n",
         "\n",
         "# Run both analyses\n",
-        "run_w2_analysis()   # new W2 study\n",
+        "#run_w2_analysis()   #W2 study\n",
         "\n",
         "# Run the simulations\n",
-        "#run_simulations()"
+        "run_simulations()"
       ]
     }
   ]
